--- a/{{ cookiecutter.app_slug }}/templates/exports/button.html
+++ b/{{ cookiecutter.app_slug }}/templates/exports/button.html
@@ -1,1 +1,1 @@
-<a href="{% url 'exports:export' %}" class="btn btn-primary" role="button">{{ button_text }}</a>
+<a href="{% raw %}{% url 'exports:export' %}{% endraw %}" class="btn btn-primary" role="button">{{ button_text }}</a>
