Updated the button.html template

--- a/{{ cookiecutter.app_slug }}/templates/exports/button.html
+++ b/{{ cookiecutter.app_slug }}/templates/exports/button.html
@@ -1,1 +1,1 @@
-<a href="{% raw %}{% url 'exports:export' %}{% endraw %}" class="btn btn-primary" role="button">{{ button_text }}</a>
+<a href="{% raw %}{% url 'exports:export' %}{% endraw %}" class="btn btn-primary" role="button">{% raw %}{{ button_text }}{% endraw %}</a>
